added methadone, apple martini crystal lite, and the horsepussy. didn't remove the old horsepussy. includes new sprites.

--- a/Resources/Prototypes/Catalog/Fills/Lockers/service.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/service.yml
@@ -21,6 +21,8 @@
         amount: 2
       - id: RagItem
         amount: 2
+      - id: DrinkBottleAppleMartiniCrystalLiteFull
+        prob: 0.2 # less common so as to prevent overuse of horsepussy
 
 #- type: entity
 #  id: LockerFormalFilled
