--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/medical.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/medical.yml
@@ -44,6 +44,7 @@
         - PillCanisterDexalin
         - HandheldHealthAnalyzer
         - ClothingHandsGlovesLatex
+        - MethadoneChemistryBottle # added methadone as a rare spawn
       rareChance: 0.1
       prototypes:
         - Syringe
