--- a/Resources/Prototypes/Reagents/Consumable/Drink/alcohol.yml
+++ b/Resources/Prototypes/Reagents/Consumable/Drink/alcohol.yml
@@ -2050,3 +2050,47 @@
           min: 25
         - !type:MobStateCondition
           mobstate: Alive
+
+# this version is lore-accurate, but still uses the lovely sprite made by starlighthowls
+# well, containing alcohol is lore-innacurate. but it feels in the spirit.
+# also there is now a slim chance that you'll be fine if you drink it which feels funnier to me.
+- type: reagent
+  id: TheHorsepussy
+  name: reagent-name-thehorsepussy
+  parent: BaseAlcohol
+  desc: reagent-desc-thehorsepussy
+  physicalDesc: reagent-physical-desc-evil
+  flavor: horsepussy
+  color: "#7BD18C"
+  metamorphicSprite:
+    sprite: Objects/Consumable/Drinks/thee_horsepussy.rsi
+    state: icon_empty
+  metamorphicMaxFillLevels: 4
+  metamorphicFillBaseName: fill-
+  metamorphicChangeColor: false
+  metabolisms:
+    Drink:
+      effects:
+      - !type:SatiateThirst
+        factor: 2
+      - !type:AdjustReagent
+        reagent: Methadone
+        amount: 0.15
+      - !type:AdjustReagent
+        reagent: Ethanol
+        amount: 0.15
+    Medicine:
+      effects:
+      - !type:HealthChange
+        probability: 0.9
+        damage:
+          types:
+            Blunt: 100
+        conditions:
+        - !type:ReagentThreshold
+          min: 25
+        - !type:MobStateCondition
+          mobstate: Alive
+
+
+
