--- a/Resources/Prototypes/Entities/Objects/Specific/chemistry-bottles.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/chemistry-bottles.yml
@@ -320,3 +320,16 @@
           reagents:
             - ReagentId: Toxin
               Quantity: 30
+
+# added methadone as a bottle so it can spawn for use
+  id: MethadoneChemistryBottle
+  name: methadone bottle
+  parent: BaseChemistryBottleFilled
+  components:
+    - type: SolutionContainerManager
+      solutions:
+        drink:
+          maxVol: 100
+          reagents:
+            - ReagentId: Methadone
+              Quantity: 100
