--- a/Resources/Prototypes/Species/reptilian.yml
+++ b/Resources/Prototypes/Species/reptilian.yml
@@ -17,6 +17,8 @@
   sprites:
     Head: MobReptilianHead
     Snout: MobHumanoidAnyMarking
+    Underwear: MobHumanoidAnyMarking
+    Undershirt: MobHumanoidAnyMarking
     Chest: MobReptilianTorso
     HeadTop: MobHumanoidAnyMarking
     HeadSide: MobHumanoidAnyMarking
@@ -58,6 +60,14 @@
     Chest:
       points: 1
       required: false
+    Underwear:
+      points: 1
+      required: true
+      defaultMarkings: [ UnderwearDefault ]
+    Undershirt:
+      points: 1
+      required: true
+      defaultMarkings: [ UndershirtDefault ]
     Legs:
       points: 2
       required: false
