--- a/Resources/Prototypes/Entities/Mobs/Customization/Markings/undershirt.yml
+++ b/Resources/Prototypes/Entities/Mobs/Customization/Markings/undershirt.yml
@@ -143,7 +143,7 @@
   bodyPart: Undershirt
   markingCategory: Undershirt
   speciesRestriction: [Dwarf, Human, Reptilian, Arachnid, SlimePerson, Diona, Moth]
-  sexRestriction: [Male, Unsexed]
+  sexRestriction: [Male]
   coloring:
     default:
       type:
