--- a/Resources/Prototypes/SoundCollections/lobby.yml
+++ b/Resources/Prototypes/SoundCollections/lobby.yml
@@ -29,3 +29,18 @@
     - /Audio/Lobby/rolling_down_the_street_in_my_katamari.ogg
     - /Audio/Lobby/shred.ogg
     - /Audio/Lobby/thrashard_in_the_cave.ogg
+    - /Audio/Lobby/cizgi.ogg
+    - /Audio/Lobby/eternal_sanctity.ogg
+    - /Audio/Lobby/pillars_of_creation.ogg
+    - /Audio/Lobby/prelude.ogg
+    - /Audio/Lobby/you_blow_my_mind.ogg
+    - /Audio/Lobby/vio_grinchs_ultimatum.ogg
+    - /Audio/Lobby/in_the_pocket.ogg
+    - /Audio/Lobby/dont_drink_it.ogg
+    - /Audio/Lobby/snow_burn.ogg
+    - /Audio/Lobby/grinchs_ultimatum.ogg
+    - /Audio/Lobby/storywriter.ogg
+    - /Audio/Lobby/the_nomai.ogg
+    - /Audio/Lobby/the_norwegians.ogg
+    - /Audio/Lobby/topolla_theatre.ogg
+    - /Audio/Lobby/presenting_v.ogg
