--- a/Resources/Audio/Lobby/attributions.yml
+++ b/Resources/Audio/Lobby/attributions.yml
@@ -138,3 +138,78 @@
   license: "CC-BY-3.0"
   copyright: "Constellations by Qwertyquerty. Converted to mono OGG."
   source: "https://www.youtube.com/channel/UCPYbhBUGhH7n_G4HLK2YipQ"
+
+- files: ["cizgi.ogg"]
+  license: "Custom. Suggested by sageuu"
+  copyright: "ÇİZGİ FİLM MAKİNESİ by TRT ÇOCUK."
+  source: "https://www.youtube.com/watch?v=GYzG3PMxfNI"
+  
+- files: ["eternal_sanctity.ogg"]
+  license: "Custom. Suggested by mira"
+  copyright: "Eternal Sanctity by flashygoodness."
+  source: "https://www.youtube.com/watch?v=wPqwxBnNxWU"
+  
+- files: ["pillars_of_creation.ogg"]
+  license: "Custom. Suggested by mira"
+  copyright: "Pillars of Creation by flashygoodness."
+  source: "https://www.youtube.com/watch?v=cAMumZKiKRQ"
+  
+- files: ["prelude.ogg"]
+  license: "Custom. Suggested by mira"
+  copyright: "Prelude by Nobuo Uematsu, Masashi Hamauzu, Junya Nakano."
+  source: "https://www.youtube.com/watch?v=jJr9m9dfDZI"
+  
+- files: ["you_blow_my_mind.ogg"]
+  license: "Custom. Suggested by mira"
+  copyright: "You Blow My Mind by Hideki Okugawa."
+  source: "https://www.youtube.com/watch?v=jUs-ITmi_u4"
+  
+- files: ["vio_grinchs_ultimatum.ogg"]
+  license: "Custom. Suggested by sageuu"
+  copyright: "(Cover) Grinch's Ultimatum by PilotRedSun, Latchezar Dimitrov."
+  source: "https://youtube.com/watch?v=tBHM_yikkVY"
+  
+- files: ["in_the_pocket.ogg"]
+  license: "Custom"
+  copyright: "In The Pocket by Flamclap."
+  source: "https://www.youtube.com/watch?v=LIfZUMkykz4"
+
+- files: ["dont_drink_it.ogg"]
+  license: "Custom"
+  copyright: "Don't Drink It by Pilotredsky."
+  source: "https://youtu.be/EBFDLgqn8pw?si=R8iHo4fvb8R1J5Br"
+  
+- files: ["snow_burn.ogg"]
+  license: "Custom"
+  copyright: "Snow Burn by Fearofdark."
+  source: "https://www.youtube.com/watch?v=fvgaJa8lDXc"
+  
+- files: ["grinchs_ultimatum.ogg"]
+  license: "Custom. Suggested by mira"
+  copyright: "Grinch's Ultimatum by PilotRedSun."
+  source: "https://www.youtube.com/watch?v=z01VlftkqY8"
+
+- files: ["storywriter.ogg"]
+  license: "Custom. Suggested by hivehum"
+  copyright: "Storywriter by Supercar."
+  source: "https://www.youtube.com/watch?v=PYXVp4KV7Rw"
+  
+- files: ["the_nomai.ogg"]
+  license: "Custom"
+  copyright: "The Nomai by Andrew Prahlow."
+  source: "https://youtube.com/watch?v=7Y3xbA4gsis"
+  
+- files: ["the_norwegians.ogg"]
+  license: "Custom. Suggested by sageuu"
+  copyright: "The Norwegians by Angelo Badalamenti."
+  source: "https://youtu.be/wDEKatQwyak?si=8PLweFX1uZ1zsRtA"
+
+- files: ["topolla_theatre.ogg"]
+  license: "Custom. Suggested by starplatinumb"
+  copyright: "Topolla Theatre, Home to the One and Only Venus by Keiichi Suzuki, Hirokazu Tanaka."
+  source: "https://www.youtube.com/watch?v=tYEJnBZqBz0"
+  
+- files: ["presenting_v.ogg"]
+  license: "Custom. Suggested by starplatiunumb"
+  copyright: "Presenting VVVVVV by Souleye."
+  source: "https://www.youtube.com/watch?v=tdE3n-pxF5Y"
