Added target to thief on WantedListCartridge

--- a/Resources/Prototypes/Objectives/stealTargetGroups.yml
+++ b/Resources/Prototypes/Objectives/stealTargetGroups.yml
@@ -277,6 +277,13 @@
     sprite: Clothing/Neck/Misc/shock_collar.rsi
     state: icon
 
+- type: stealTargetGroup
+  id: WantedListCartridge
+  name: wanted list cartridge
+  sprite:
+    sprite: Objects/Devices/cartridge.rsi
+    state: cart-s
+
 #Thief structures
 
 - type: stealTargetGroup
