--- a/Resources/Prototypes/Maps/boat.yml
+++ b/Resources/Prototypes/Maps/boat.yml
@@ -1,6 +1,6 @@
 - type: gameMap
   id: Boat
-  mapName: 'NTAS. White Whale'
+  mapName: 'White Whale'
   mapPath: /Maps/boat.yml
   randomRotation: false
   minPlayers: 1
@@ -10,10 +10,10 @@
       stationProto: StandardNanotrasenStation
       components:
         - type: StationNameSetup
-          mapNameTemplate:  '{0} NTAS. White Whale {1}'
+          mapNameTemplate:  '{0} White Whale {1}'
           nameGenerator:
             !type:NanotrasenNameGenerator
-            prefixCreator: 'NTAS'
+            prefixCreator: 'AS'
         - type: StationEmergencyShuttle
           emergencyShuttlePath: /Maps/Shuttles/emergency_omega.yml 
         - type: StationJobs
