make the board sus

--- a/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/Machine/production.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/Machine/production.yml
@@ -1009,12 +1009,18 @@
 
 - type: entity
   id: CombatBakeryMicrowaveMachineCircuitboard
-  parent: MicrowaveMachineCircuitboard
-  name: microwave machine board
-  suffix: Machine Board, Combat Bakery
+  parent: [BaseMachineCircuitboard, BaseSyndicateContraband]
+  name: suspicious microwave machine board
+  suffix: Machine Board
   components:
+    - type: Sprite
+      state: security
     - type: MachineBoard
       prototype: CombatBakeryMicrowave
+      stackRequirements:
+        Capacitor: 1
+        Glass: 2
+        Cable: 2
 
 - type: entity
   id: SyndicateMicrowaveMachineCircuitboard
