add instructions note

--- a/Resources/Prototypes/Catalog/Fills/Boxes/syndicate.yml
+++ b/Resources/Prototypes/Catalog/Fills/Boxes/syndicate.yml
@@ -84,3 +84,4 @@
         amount: 2
       - id: WeaponBaguette
       - id: CombatBakeryMicrowaveMachineCircuitboard
+      - id: PaperWrittenCombatBakeryKit
