--- a/Resources/Prototypes/Recipes/Lathes/salvage.yml
+++ b/Resources/Prototypes/Recipes/Lathes/salvage.yml
@@ -34,3 +34,34 @@
     Plastic: 200
     Silver: 200
     Diamond: 100
+
+- type: latheRecipe
+  id: PKAUpgradeDamage
+  result: PKAUpgradeDamage
+  category: Weapons
+  completetime: 5
+  materials:
+    Steel: 1500
+    Gold: 500
+    Silver: 500
+
+- type: latheRecipe
+  id: PKAUpgradeRange
+  result: PKAUpgradeRange
+  category: Weapons
+  completetime: 5
+  materials:
+    Steel: 1500
+    Gold: 500
+    Silver: 500
+
+- type: latheRecipe
+  id: PKAUpgradeFireRate
+  result: PKAUpgradeFireRate
+  category: Weapons
+  completetime: 5
+  materials:
+    Steel: 1500
+    Gold: 500
+    Silver: 500
+
