--- a/Resources/Prototypes/Entities/Structures/Shuttles/station_anchor.yml
+++ b/Resources/Prototypes/Entities/Structures/Shuttles/station_anchor.yml
@@ -108,5 +108,5 @@
       - machine_board
     - type: UserInterface
       interfaces:
-      - key: enum.PowerChargeUiKey.Key
-        type: PowerChargeBoundUserInterface
+        enum.PowerChargeUiKey.Key:
+          type: PowerChargeBoundUserInterface
