--- a/Resources/Prototypes/Recipes/Construction/Graphs/weapons/improvised_arrow.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/weapons/improvised_arrow.yml
@@ -21,3 +21,24 @@
 
   - node: ImprovisedArrow
     entity: ArrowImprovised
+
+- type: constructionGraph
+  id: ImprovisedArrowCarp
+  start: start
+  graph:
+  - node: start
+    edges:
+    - to: ImprovisedArrowCarp
+      steps:
+      - material: MetalRod
+        amount: 1
+        doAfter: 0.5
+      - material: Cloth
+        amount: 1
+        doAfter: 0.5
+      - material: SpaceCarpTooth
+        amount: 1
+        doAfter: 0.5
+
+  - node: ImprovisedArrowCarp
+    entity: ArrowImprovisedCarp
