--- a/Resources/Prototypes/Entities/Objects/Specific/Xenobiology/dish.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Xenobiology/dish.yml
@@ -31,16 +31,36 @@
     allowCollection: false
     toolsTransferWhitelist:
       components:
-        - CellCollector
+      - CellCollector
   - type: CellDishVisuals
 
 - type: entity
   parent: PetriDish
   id: PetriDishMurine
-  name: petri dish
-  description: This makes you feel well-cultured.
   suffix: Murine
   components:
   - type: CellGeneration
     cells:
-      - Murine
+    - Murine
+
+- type: entity
+  parent: PetriDish
+  id: PetriDishAll
+  suffix: All
+  components:
+  - type: CellGeneration
+    cells:
+    - Murine
+    - Galliform
+    - Bovine
+    - Feliform
+    - Canid
+    - Ursine
+    - Cyprinid
+    - CartilaginousCyprinid
+    - Ophidic
+    - Anura
+    - Caudata
+    - Atypical
+    - Aphid
+    - Pseudoarachnoid
