--- a/Resources/Maps/marathon.yml
+++ b/Resources/Maps/marathon.yml
@@ -10999,7 +10999,7 @@ entities:
       pos: -20.5,-5.5
       parent: 30
     - type: Door
-      secondsUntilStateChange: -22228.79
+      secondsUntilStateChange: -22262.71
       state: Opening
     - type: DeviceLinkSource
       lastSignals:
@@ -13022,6 +13022,11 @@ entities:
       rot: -1.5707963267948966 rad
       pos: -65.5,13.5
       parent: 30
+  - uid: 4393
+    components:
+    - type: Transform
+      pos: -52.5,2.5
+      parent: 30
   - uid: 11451
     components:
     - type: Transform
@@ -13038,6 +13043,18 @@ entities:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -65.5,21.5
+      parent: 30
+  - uid: 20731
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -59.5,-7.5
+      parent: 30
+  - uid: 20732
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -52.5,-7.5
       parent: 30
 - proto: AtmosDeviceFanTiny
   entities:
